[gd_scene load_steps=4 format=3 uid="uid://c12ggslm6o56o"]

[ext_resource type="Script" uid="uid://cxoly2t2d25el" path="res://projectiles/richochet_projectile.gd" id="1_bxxf1"]
[ext_resource type="Texture2D" uid="uid://udq7qdq5giuu" path="res://projectiles/richocet_bottlecap.png" id="2_645in"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lg6ng"]
radius = 12.0

[node name="RicochetProjectile" type="Area2D"]
script = ExtResource("1_bxxf1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lg6ng")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_645in")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
